@startuml ATMSystem

class ATM {
    -id : int
    -location : String
    +performTransaction()
}

class ATMUser {
    -id : int
    -username : String
    -password : String
    -account : BankAccount
    -IBAN : String
    -BAN : String
    +initiateTransaction()
    +authenticate()
    +checkBalance()
}

class ATMAdmin {
    -admin_id : int
    -username : String
    -password : String
    +manageATM()
    +monitorTransactions()
}

class BankAccount {
    -account_id : int
    -IBAN : String
    -balance : float
    -holder : ATMUser
    +deposit()
    +withdraw()
    +transfer()
}

class Deposit {
    -transaction_id : int
    -timestamp : String
    -amount : float
    +processDeposit()
}

class Withdrawal {
    -transaction_id : int
    -timestamp : String
    -amount : float
    +processWithdrawal()
}

class Payment {
    -transaction_id : int
    -timestamp : String
    -amount : float
    -recipientIBAN : String
    -description : String
    +processPayment()
}

class Receipt {
    -receipt_id : int
    -content : String
    extends Document
}

ATM -- ATMUser : interacts
ATM -- ATMAdmin : managed by
ATMUser -- BankAccount : owns
ATMUser -- Deposit : initiates
ATMUser -- Withdrawal : initiates
ATMUser -- Payment : initiates
BankAccount -- Deposit : participates
BankAccount -- Withdrawal : participates
Payment -- Receipt : generates
Deposit -- Receipt : generates
Withdrawal -- Receipt : generates

@enduml